--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "attribute-landing-page",
   "version": "0.1.0",
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "lucide-react": "^0.518.0",
+    "motion": "^12.18.1",
+    "next": "15.3.4",
+    "postcss": "^8.5.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.10"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
   }
 }
